--- a/mobile_app/jl-streaming/src/app/camera/camera.page.html
+++ b/mobile_app/jl-streaming/src/app/camera/camera.page.html
@@ -5,19 +5,39 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <!--
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">camera</ion-title>
     </ion-toolbar>
   </ion-header>
+-->
 
-  <div>
+<!--   <div>
     <video src="" id="video" class="video-element2" autoplay="true">
     </video>
     <canvas id="canva"></canvas>
     <div id="status"></div>
-  </div>
 
+    <img [src]="picture" alt="">
+  </div>
+-->
+
+<!-- Web Only-->
+ <div id="cameraPreview"></div>
+ <canvas id="canva"></canvas>
+<!-- end-->
+
+<div *ngIf="cameraActive">
+  <ion-button (click)="stopCamera()" expand="block" id="close">
+      <ion-icon slot="icon-only" name="close-circle"></ion-icon>
+  </ion-button>
+
+
+  <ion-button (click)="flipCamera()" expand="block" id="flip">
+      <ion-icon slot="icon-only" name="repeat"></ion-icon>
+  </ion-button>
+</div>
 
 
 </ion-content>
