--- a/mobile_app/jl-streaming/src/app/camera/camera.page.scss
+++ b/mobile_app/jl-streaming/src/app/camera/camera.page.scss
@@ -1,5 +1,54 @@
-.video-element{
-  width: 100%;
-  height:100%;
-  background-color: aliceblue;
+
+
+
+#capture {
+  position: absolute;
+  bottom: 30px;
+  left: calc(50% - 25px);
+  width: 50px;
+  height: 50px;
+  z-index: 99999;
+}
+
+#streaming {
+  position: absolute;
+  bottom: 30px;
+  left: calc(50% - 25px);
+  width: 50px;
+  height: 50px;
+  z-index: 99999;
+}
+
+#flip {
+  position: absolute;
+  bottom: 30px;
+  left: calc(50% + 125px);
+  width: 50px;
+  height: 50px;
+  z-index: 99999;
+}
+
+#close {
+  position: absolute;
+  bottom: 30px;
+  left: calc(50% - 175px);
+  width: 50px;
+  height: 50px;
+  z-index: 99999;
+}
+
+#capture::part(native) {
+  border-radius: 30px;
+}
+
+#streaming::part(native) {
+  border-radius: 30px;
+}
+
+#close::part(native) {
+  border-radius: 30px;
+}
+
+#flip::part(native) {
+  border-radius: 30px;
 }
