--- a/mobile_app/jl-streaming/src/app/camera/camera.page.html
+++ b/mobile_app/jl-streaming/src/app/camera/camera.page.html
@@ -12,8 +12,8 @@
   </ion-header>
 
   <ion-grid>
-    <ion-row>
-      <video id="webcam" autoplay playsinline width="webCamWidth" height="webCamHeight"></video>
+    <ion-row class="ion-align-items-center">
+      <video id="webcam" autoplay playsinline></video>
 
       <div *ngIf="!cameraActive">
         <ion-button (click)="startCamera()" expand="block" id="capture">
@@ -32,8 +32,8 @@
         </ion-button>
       </div>
     </ion-row>
-    <ion-row>
-      <canvas id="canvas" class=""></canvas>
+    <ion-row class="">
+      <canvas id="canvas" class="" width="1920" height="1080"></canvas>
       <audio id="snapSound" src="audio/snap.wav" preload = "auto"></audio>
     </ion-row>
   </ion-grid>
