--- a/mobile_app/jl-streaming/src/app/camera/camera.page.scss
+++ b/mobile_app/jl-streaming/src/app/camera/camera.page.scss
@@ -1,4 +1,13 @@
+#webcam{
+  width: 100%;
+  height: 720;
+  /*height: fit-content;
+  object-fit:cover;*/
+}
+#canvas{
+  width: auto;
 
+}
 
 
 #capture {
